tests/baselines/reference/exportClassNameWithObjectUMD.errors.txt
exportClassNameWithObjectUMD.ts(1,14): error TS2725: Class name cannot be 'Object' when targeting ES5 and above with module UMD.


==== exportClassNameWithObjectUMD.ts (1 errors) ====
    export class Object {}
                 ~~~~~~
!!! error TS2725: Class name cannot be 'Object' when targeting ES5 and above with module UMD.
    